# openRN

./: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
examples/: Makefile  Reservoir_mnist_new2_im_nils2.cpp  joined_reservoir.cpp
src/: Makefile  Makefile.am  Makefile.in  Node.cc
src/.deps/: libopenrn_la-main.Plo
src/includes/: Node.h
tools/MNIST/: mnist.py  mnistool.py
